# studydemo

./: main.py  pyproject.toml
chat/: serializers.py
chat/agents/: email_parser.py
chat/graph/: quote_graph.py
chat/handlers/: quote_handler.py
chat/services/: quote_service.py
chat/utils/: softbank_api.py
chat/views/: quote_view.py
frontend/src/: App.jsx
frontend/src/api/: quoteApi.js
frontend/src/components/: QuoteForm.jsx
mysite/: settings.py  urls.py
